# mac-recorder

./: .gitignore  Makefile  README.md
MacRecorder/: Package.swift
MacRecorder/Resources/: Info.plist
MacRecorder/Sources/: AppState.swift  AudioCapturer.swift  MacRecorderApp.swift  MenuBarView.swift  ProjectManager.swift  ProjectsView.swift  SettingsView.swift  TranscriptView.swift
MacRecorder/Sources/Engine/: Messages.swift  PythonBridge.swift
engine/: pyproject.toml
engine/src/mac_recorder_engine/: __init__.py  __main__.py  main.py  protocol.py  transcriber.py
engine/src/mac_recorder_engine/asr/: engine.py  language.py
engine/tests/: conftest.py  test_asr_engine.py  test_protocol.py  test_transcriber.py
scripts/: bootstrap_engine.sh  build_installer.sh  postinstall
