[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mac-recorder-engine"
version = "0.1.0"
description = "Python ASR engine for mac-recorder (onnx-asr based)"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "onnx-asr[cpu,hub]>=0.10",
    "numpy>=1.24,<3",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mac_recorder_engine"]

[tool.ruff]
target-version = "py310"
line-length = 100
